fix filter dropdown z-index and update ci to fetch accurate commit dates

--- a/src/styles/infopage.css
+++ b/src/styles/infopage.css
@@ -1,6 +1,7 @@
 main {
   max-width: 40rem;
   margin: 1.5rem auto;
+  margin-bottom: 3rem;
 }
 
 h1 {
